--- a/app/style.scss
+++ b/app/style.scss
@@ -1,8 +1,31 @@
 $primaryColor:transparent;
+$primaryHue: 120;
+$activeHue: 60;
 body {
 	background-color: $primaryColor;
 }
 
 [ng-click] {
 	cursor: pointer;
+}
+
+menu {
+	display: block;
+	item {
+		display: inline-block;
+		margin: 5px 10px;
+		padding: 0px;
+		a {
+			display: block;
+			width: 100%;
+			height: 100%;
+			padding: 5px;
+			background-color: hsl($primaryHue, 100%, 80%);
+			text-decoration: none;
+			color: black;
+			&.active {
+				background-color: hsl($activeHue, 100%, 80%);
+			}
+		}
+	}
 }
